# ngm_mlops

./: .gitignore  =0.28.0  ENVIRONMENT-QUICK-START.md  README.md  REFACTORING-SUMMARY.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd-dev.yml  cd-environments.yml  cd-preprod.yml  cd-prod-branch.yml  cd-prod.yml  cd-rnd.yml  cd-uat-branch.yml  cd-uat.yml  ci.yml
docs/: ARCHITECTURE.md  CI-CD-GUIDE.md  CONFIGURATION-GUIDE.md  ENVIRONMENT-STRATEGY.md  MODEL-LIFECYCLE.md  RESTRUCTURING-SUMMARY.md  TEST-SUITE.md  ml-pull-request.md  mlops-setup.md
resources/: README.md
resources/jobs/: batch_inference.yml  feature_engineering.yml  train.yml  validate.yml
resources/models/: churn_config.yml
resources/serving/: churn_endpoint.yml
scripts/: register_mock_model.py
src/: __init__.py
src/common/: __init__.py  config.py  data_quality.py  drift.py  exceptions.py  logger.py  mlflow_utils.py
src/models/: __init__.py  base.py  config.yml  registry.py
src/models/churn/: __init__.py  config.yml  features.py  inference.py  serving.py  trainer.py  validator.py
src/models/churn/sql/: Transaction_Features.sql  account_features.sql  account_features_hybrid.sql  combined_features.sql  combined_features_hybrid.sql
src/models/fraud/: __init__.py
src/pipelines/: __init__.py  drift_monitor.py  inference.py  monitor.py  train.py  validate.py
tests/: conftest.py  pytest.ini
tests/integration/: test_trainer.py
tests/unit/: test_config_loader.py  test_pipeline.py  test_smoke.py  test_trainer_flow.py
