[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ngm_mlops"
version = "0.1.0"
description = "NGM MLOps Platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "databricks-sdk>=0.20.0",
    "mlflow>=2.0.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pydantic>=1.10.0",
]

[project.scripts]
ngm-train = "pipelines.train:main"
ngm-validate = "pipelines.validate:main"
ngm-inference = "pipelines.inference:main"
ngm-monitor = "pipelines.monitor:main"

[tool.setuptools.package-data]
ngm_mlops = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ngm_mlops*"]